crates/mux/src/snapshots/plexy_glass_mux__compositor__tests__snapshot_block_mode_folds_collapsed.snap
---
source: crates/mux/src/compositor.rs
expression: "dump_frame(&vs, true)"
---
$ one                        ▸ 2 lines ✓
$ two
out3





--- attrs (R)everse (H)ighlight (D)im (B)old (U)nderline ---
D.DDD........................DDDDDDDDDDD
