crates/mux/src/snapshots/plexy_glass_mux__compositor__tests__snapshot_block_status_border.snap
---
source: crates/mux/src/compositor.rs
expression: "dump_frame(&vs, false)"
---
▐$ ok
▐done
▐$ bad
▐boom
▐
▐
