crates/mux/src/snapshots/plexy_glass_mux__compositor__tests__snapshot_copy_mode_search_highlight.snap
---
source: crates/mux/src/compositor.rs
expression: "dump_frame(&vs, true)"
---
hello world




--- attrs (R)everse (H)ighlight (D)im (B)old (U)nderline ---
.HHH
