crates/mux/src/snapshots/plexy_glass_mux__compositor__tests__snapshot_live_view_folded_block.snap
---
source: crates/mux/src/compositor.rs
expression: "dump_frame(&vs, false)"
---
$ one                        ▸ 2 lines ✓
$ two
out3
