crates/mux/src/snapshots/plexy_glass_mux__compositor__tests__snapshot_overlay_command_prompt.snap
---
source: crates/mux/src/compositor.rs
expression: "dump_frame(&vs, false)"
---
body




 :split-window█
