crates/mux/src/snapshots/plexy_glass_mux__compositor__tests__snapshot_overlay_help_box.snap
---
source: crates/mux/src/compositor.rs
expression: "dump_frame(&vs, false)"
---
body

      ┌────── Keybindings ───────┐
      │Ctrl+a c  New window      │
      │Ctrl+a |  Split right     │
      │                          │
      └─ j/k scroll · esc close ─┘
