crates/mux/src/snapshots/plexy_glass_mux__compositor__tests__snapshot_popup_box.snap
---
source: crates/mux/src/compositor.rs
expression: "dump_frame(&vs, false)"
---
background

          ┌─────── cat ────────┐
          │hi                  │
          │                    │
          │                    │
          │                    │
          │                    │
          │                    │
          └────────────────────┘
