crates/mux/src/snapshots/plexy_glass_mux__compositor__tests__snapshot_status_bar_top.snap
---
source: crates/mux/src/compositor.rs
expression: "dump_frame(&vs, false)"
---
plexy
────────────────
body
