crates/mux/src/snapshots/plexy_glass_mux__compositor__tests__snapshot_sticky_header_dim.snap
---
source: crates/mux/src/compositor.rs
expression: "dump_frame(&vs, true)"
---
cargo build
l3
l4
--- attrs (R)everse (H)ighlight (D)im (B)old (U)nderline ---
DDDDDDDDDDD
