crates/mux/src/snapshots/plexy_glass_mux__compositor__tests__snapshot_two_pane_split_border.snap
---
source: crates/mux/src/compositor.rs
expression: "dump_frame(&vs, false)"
---
L世 │R
    │
    │
